app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require foundation_and_overrides
 *= require_self
 *= require_tree .
 */

.main {
  margin: 15px auto;
}

.user-links {
  margin-top: 15px;
}

#error_explanation h2 {
  font-size: 1.2em;
  color: #c60f13;
}

#error_explanation ul {
  list-style: disc inside;
}

.progress {
  position: relative;
}

.progress .meter {
  z-index: 9000;
}

.progress-animate {
  -webkit-transition: width 290ms linear;
  -moz-transition: width 290ms linear;
  -ms-transition: width 290ms linear;
  -o-transition: width 290ms linear;
  transition: width 290ms linear;
}

.progress-background {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: #CCC;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  border: 2px solid #fff;
  z-index: -9000;
}

.progress-data {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  text-align: center;
  margin-top: 3px;
  font-size: 16px;
  color: #fff;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.65);
  font-weight: 500;
}

